# service-dash

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
service_dash/: dash.py  main.py  messages.py  screens.py
service_dash/components/: __init__.py  dashboard.py  footer.py  header.py
service_dash/repository/: service.py
service_dash/styles/: cluster_selector.tcss  exit_confirm_screen.tcss  footer.tcss  log_viewer.tcss  redeploy_service.tcss
